# lvcc

./: .gitignore  CMakeLists.txt
cmake/: BuildType.cmake  FindLabVIEW.cmake  get_standard_library_name.cmake  setup_ide_folders.cmake  version.h.in
labview-test/: labview-test-project.lvproj  multiply_array.vi  multply.vi  populate.vi  resize_array.vi
lvcc/: CMakeLists.txt
lvcc/include/lvcc/: data_types.h  funcs_array.h  funcs_string.h  globals.h  lvcc.h  types.h  types_arr1D.h  utils.h
test/: CMakeLists.txt
test/src/: safibra_interrogator.cpp  test.cpp
